k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-backend
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
        - name: flask-backend
          image: docker-satyam-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
