k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-frontend
  template:
    metadata:
      labels:
        app: node-frontend
    spec:
      containers:
        - name: node-frontend
          image: docker-satyam-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
