k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-frontend-service
  namespace: satyam-app
spec:
  selector:
    app: node-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
